Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ textarea {
   border: 0;
   width: 90%;
   display: table;
-  margin: 0 auto;
-  padding: 15px;
+  margin: 15px auto;
   outline: none;
 }
